--- a/resources/mixin.yaml
+++ b/resources/mixin.yaml
@@ -4,7 +4,7 @@ system-proxy:
 ipv6: true
 mixed-port: 7897
 
-allow-lan: true
+allow-lan: false
 authentication:
   # - "username:password" # 用户验证（clashon 会自动填充验证信息）
 unified-delay: true
@@ -12,8 +12,6 @@ tcp-concurrent: true
 external-controller: "0.0.0.0:9000"
 external-ui: yacd-meta
 secret: 
-external-ui-url: 
-
 
 profile:
   tracing: true
